# nexus

./: .gitignore  Cargo.toml  IMPLEMENT.md  IMPLIMENT.md  README.md  bug fix plan.md  build.rs  plan.md
.cargo/: config.toml
.github/workflows/: release.yml
docs/: commands.md  testing_checklist.md  wizard_status.md
installer/: LICENSE.rtf  README_INSTALLER.md  build.bat  config_default.json  nexus.wxs  prepare-assets.bat  prepare-assets.py  winlauncher.wxs
scripts/: build_release.bat  setup_dev.bat
src/: actions.rs  app_discovery.rs  config.rs  main.rs  platform_window.rs  search.rs  settings_ui.rs  single_instance.rs  startup.rs  tray.rs  ui.rs  updater.rs  wizard.rs
ui/: app_settings.slint  app_window.slint  main.slint  nexus_ui.slint  settings.slint  setup_wizard.slint  wizard.slint
