[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
description = "A lightweight Windows launcher application"
authors = ["Qwenzy"]

[dependencies]
# UI Framework - Slint for lightweight, GPU-accelerated UI
slint = { version = "1.14", features = ["raw-window-handle-06"] }

# Windows API bindings
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Dwm",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_Storage_FileSystem",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_Security",
] }

# Global hotkey support
global-hotkey = "0.6"

# Raw window handle for platform-specific window manipulation
raw-window-handle = "0.6"

# System tray integration
tray-icon = "0.19"

# Image handling for icons
image = { version = "0.25", default-features = false, features = ["png", "ico"] }

# Fuzzy matching for search
fuzzy-matcher = "0.3"

# Math expression evaluation for calculator
meval = "0.2"

# URL opening
open = "5"

# Logging
log = "0.4"
env_logger = "0.11"

# Async runtime for background tasks
tokio = { version = "1", features = ["rt", "sync", "time"] }

# Serialization for settings
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for auto-updates
reqwest = { version = "0.12", features = ["blocking", "json"] }

# Version comparison for updates
semver = "1.0"

# Directory utilities
dirs = "5"

[build-dependencies]
slint-build = "1.14"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Abort on panic (smaller binary)
strip = true        # Strip symbols

# Windows-specific settings
[target.'cfg(windows)'.build-dependencies]
embed-resource = "2"
